<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginEnd="@dimen/normal_100"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_200">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_data"
                    app:civ_circle_background_color="@color/background_color" />

                <ImageView
                    android:id="@+id/imageViewCamera"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_camera" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_name_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_surname_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_200"
                android:clickable="true"
                android:focusable="true"
                app:endIconDrawable="@drawable/ic_dropdown"
                app:endIconMode="custom">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/settings_occupation_hint"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingTop="22dp"
                    android:paddingEnd="0dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOtherOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextOtherOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/settings_other_occupation" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.example.cowboysstore.presentation.customviews.ProgressButton
            android:id="@+id/buttonApplyChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginEnd="@dimen/normal_100"
            android:layout_marginBottom="@dimen/normal_100"
            app:layout_anchor="@+id/linearLayoutSettings"
            app:layout_anchorGravity="bottom|center"
            app:text="@string/settings_button_apply_changes"
            app:textAllCaps="true" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>